# oslo_learn

./: README.md  setup.cfg
kombu_learn/: __init__.py  client.py  config  config.py  connection.py  connection_pool.py  entity.py  rabbitmq_entity.py  rabbitmq_impl.py  server.py  test_client.py  test_server.py
oslo.config-2013.1b1_code_review/oslo/config/: cfg.py
oslo.config-2013.1b1_code_review/tests/: test_cfg.py
oslo_cfg_test/: oslo_cfg_test.py  oslo_conf
oslo_db_learn/app/: main.py
oslo_db_learn/db/: api.py
oslo_db_learn/db/sqlachemy/: api.py  models.py
oslo_messaging_test/: requirements.txt  rpc_client.py  rpc_config  rpc_server.py
